--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,10 @@ html {
 	box-sizing: border-box;
 }
 
+html, body, #root {
+    height: 100%;
+}
+
 *,
 *::before,
 *::after {
@@ -20,8 +24,7 @@ body {
 
 .wrapper {
    width: 100%;
-   height: 100vh;
-   min-height: 100vh;
+   height: 100%;
    background-color: #B6EDF2;
 
    &-container {
@@ -79,4 +82,3 @@ body {
         }
     }
 }
-
