--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,23 +1,23 @@
 @font-face {
-    font-family: 'OpenSans';
+    font-family: 'OpenSans-Light';
     font-style: normal;
     font-weight: 300;
     src: local('OpenSans-Light'),
-         url('../fonts/OpenSansLight.woff2') format('woff2'); 
+         url('src/fonts/OpenSansLight.woff2') format('woff2');
 }
 
 @font-face {
-    font-family: 'OpenSans';
+    font-family: 'OpenSans-Regular';
     font-style: normal;
     font-weight: 400;
     src: local('OpenSans-Regular'),
-         url('../fonts/OpenSansRegular.woff2') format('woff2'); 
+         url('src/fonts/OpenSansRegular.woff2') format('woff2');
 }
 
 @font-face {
-    font-family: 'OpenSans';
+    font-family: 'OpenSans-SemiBold';
     font-style: normal;
     font-weight: 600;
     src: local('OpenSans-SemiBold'),
-         url('../fonts/OpenSansSemiBold.woff2') format('woff2'); 
+         url('src/fonts/OpenSansSemiBold.woff2') format('woff2');
 }
