--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,33 +1,30 @@
+@use "./media";
 @import "./fonts";
 
 
 html {
-	box-sizing: border-box;
-}
-
-html, body, #root {
-    height: 100%;
+  box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-	box-sizing: inherit;
+  box-sizing: inherit;
 }
 
-
 body {
-    font-family: 'OpenSans', sans-serif;
-    margin: 0;
-    overflow: hidden;
+  font-family: 'OpenSans-Regular', sans-serif;
+  margin: 0;
+  overflow: hidden;
 }
 
 .wrapper {
-   width: 100%;
-   height: 100%;
-   background-color: #B6EDF2;
+  width: 100%;
+  height: 100vh;
+  min-height: 500px;
+  background-color: #B6EDF2;
 
-   &-container {
+  &-container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -35,50 +32,64 @@ body {
     height: 100%;
 
     &__block {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        max-width: 1400px;
-        padding: 0 15px;
-        margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 1400px;
+      padding: 0 15px;
+      margin: 0 auto;
     }
 
-   }
+  }
 }
 
 .kipicenko-container-img {
-    width: 200px;
-    height: 200px;
-    border-radius: 4px;
-    overflow: hidden;
+  width: 200px;
+  height: 200px;
+  border-radius: 4px;
+  overflow: hidden;
 
-    & img {
-        width: 100%;
-        height: auto;
-    }
+  & img {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .text {
-    font-size: 32px;
-    font-weight: 400;
+  font-size: 32px;
+  font-weight: 400;
+  text-transform: uppercase;
+
+  @include media.tablet {
+    font-size: 20px;
+  }
+
+  @include media.mobile {
+    font-size: 16px;
+  }
 }
 
 .info {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 
-    & div {
-        margin-right: 10px;
-    }
+  & div {
+    margin-right: 10px;
+  }
 
-    & a {
-        text-decoration: none;
-        word-break: break-all;
-    }
+  & a {
+    text-decoration: none;
+    word-break: break-all;
+    text-align: center;
+  }
 
-    @media screen and (max-width: 548px) {
-        & {
-            flex-direction: column;
-        }
-    }
+  @include media.mobile {
+    flex-direction: column;
+  }
+}
+
+.text {
+  background-image: linear-gradient(90deg, #0068e1, #a161ee);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
